<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ui"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:src="@drawable/instagram"
        android:tint="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/ACTIVITY_SING_UP_IMG_CONTENT"/>

    <EditText
        android:id="@+id/fullname_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/ACTIVITY_SING_UP_TXT_FULL_NAME"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/fullname_signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/ACTIVITY_SING_UP_TXT_USERNAME"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/username_signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/ACTIVITY_SING_UP_TXT_EMAIL"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/email_signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:hint="@string/ACTIVITY_SING_UP_TXT_PASSWORD"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/ACTIVITY_SING_UP_BTN_REGISTER"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/signin_link_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:text="@string/ACTIVITY_SING_UP_BTN_HAVE_ACC"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"/>

</RelativeLayout>