<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image_search"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/user_name_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/USER_ITEM_LAYOUT_USERNAME"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image_search"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/user_full_name_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/USER_ITEM_LAYOUT_PROFILE_NAME"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image_search"
            app:layout_constraintTop_toBottomOf="@+id/user_name_search"/>

        <Button
            android:id="@+id/follow_btn_search"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/button_black_background"
            android:text="@string/USER_ITEM_LAYOUT_BTN_FOLLOW"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>