<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imgSplashLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/ig_logo_1" />

        <TextView
            android:id="@+id/lblSplashTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/SPLASH_SCREEN_APP_TITLE"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/imgSplashLogo" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/lblPowerBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/SPLASH_SCREEN_POWER_BY"
            android:textColor="@color/blackColor"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/lblDesmond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/SPLASH_SCREEN_LBL_DESMOND"
            android:textColor="@color/blackColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblPowerBy"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>