<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/comments_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ACTIVITY_COMMENTS_LBL_TITLE"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/post_image_comment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_layout_comments"
        android:contentDescription="@string/ACTIVITY_COMMENTS_IMG_CONTENT"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/post_image_comment"
        android:layout_margin="5dp"
        android:layout_above="@+id/commentRelative">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/commentRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:padding="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_comment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile"
            android:layout_marginStart="4dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <EditText
            android:id="@+id/add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_image_comment"
            android:layout_toStartOf="@+id/post_comment"
            android:hint="@string/ACTIVITY_COMMENTS_TXT_WRITE_COMMENT"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/post_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/ACTIVITY_COMMENTS_BTN_PUBLISH"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_marginEnd="6dp"/>

    </RelativeLayout>

</RelativeLayout>